0026217: Visualization, Select3D_SensitiveCircle - fix compilation with CLang for iOS

Inclusion detection for filled sensitive circles was corrected